# django-booking

./: .gitignore  README.md  app.db  pyproject.toml  requirements.txt
.cursor/agents/: architect.md  code-reviewer.md  code-simplifier.md  doc-updater.md  planner.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md  test-runner.md  verifier.md
.cursor/commands/: code-review.md  commit-only.md  commit-push.md  explain-error.md  learn.md  refactor-clean.md  tdd.md  test-cards.md  test-coverage.md  update-codemaps.md  update-docs.md
.cursor/rules/: agents-skills.md  agents.md  commit-message-format.mdc  main.mdc  pr-message-format.mdc  prompt-injection-guard.mdc  test-strategy.mdc  user-CLAUDE.md
accounts/: admin.py  context_processors.py  models.py
accounts/migrations/: 0001_initial.py
app/: db.py  errors.py  main.py  models.py  security.py  utils.py
app/repositories/: admin_repo.py  application_repo.py  event_repo.py  message_repo.py  notification_repo.py  profile_repo.py  review_repo.py  user_repo.py
app/routes/: admin.py  auth.py  deps.py  messages.py  notifications.py  organizer.py  setup.py  stallholder.py
app/services/: admin_service.py  application_service.py  auth_service.py  (+5 more)
core/: forms.py  models.py  urls.py  views.py
docs/: test-perspectives.md
mysite/: settings.py  urls.py
scripts/: create_admin.py
templates/: navbar.html  sidebar.html
tests/: conftest.py  test_admin_service.py  test_application_service.py  test_auth_service.py  test_event_service.py  test_message_service.py  test_profile_service.py  test_review_service.py
(+29 files in other folders)
