[project]
name = "tets"
version = "0.1.0"
description = "UV-managed Python project."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "itsdangerous>=2.2",
  "jinja2>=3.1",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.16",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
